// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon render alert 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render anchor 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2C10.34,2 9,3.34 9,5C9,6.27 9.8,7.4 11,7.83V10H8V12H11V18.92C9.16,18.63 7.53,17.57 6.53,16H8V14H3V19H5V17.3C6.58,19.61 9.2,21 12,21C14.8,21 17.42,19.61 19,17.31V19H21V14H16V16H17.46C16.46,17.56 14.83,18.63 13,18.92V12H16V10H13V7.82C14.2,7.4 15,6.27 15,5C15,3.34 13.66,2 12,2M12,4C12.55,4 13,4.45 13,5C13,5.55 12.55,6 12,6C11.45,6 11,5.55 11,5C11,4.45 11.45,4 12,4Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render arrow-down 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 16.5a1.58 1.58 0 0 1-1.116-.458l-5.921-5.87a1.556 1.556 0 0 1 0-2.213 1.588 1.588 0 0 1 2.232 0L12 12.722l4.804-4.763a1.59 1.59 0 0 1 2.234 0 1.557 1.557 0 0 1 0 2.213l-5.921 5.87A1.584 1.584 0 0 1 12 16.5"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render arrow-up 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 7.5c.405 0 .808.153 1.116.458l5.921 5.87a1.556 1.556 0 0 1 0 2.213 1.588 1.588 0 0 1-2.232 0L12 11.278l-4.804 4.763a1.59 1.59 0 0 1-2.234 0 1.557 1.557 0 0 1 0-2.213l5.921-5.87A1.584 1.584 0 0 1 12 7.5"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render asterisk 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render auto-fix 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render bullhorn 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,8H4A2,2 0 0,0 2,10V14A2,2 0 0,0 4,16H5V20A1,1 0 0,0 6,21H8A1,1 0 0,0 9,20V16H12L17,20V4L12,8M15,15.6L13,14H4V10H13L15,8.4V15.6M21.5,12C21.5,13.71 20.54,15.26 19,16V8C20.53,8.75 21.5,10.3 21.5,12Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render burger 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render calculator 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M7,2H17A2,2 0 0,1 19,4V20A2,2 0 0,1 17,22H7A2,2 0 0,1 5,20V4A2,2 0 0,1 7,2M7,4V8H17V4H7M7,10V12H9V10H7M11,10V12H13V10H11M15,10V12H17V10H15M7,14V16H9V14H7M11,14V16H13V14H11M15,14V16H17V14H15M7,18V20H9V18H7M11,18V20H13V18H11M15,18V20H17V18H15Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render calendar-range 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render cancel 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12C4,13.85 4.63,15.55 5.68,16.91L16.91,5.68C15.55,4.63 13.85,4 12,4M12,20A8,8 0 0,0 20,12C20,10.15 19.37,8.45 18.32,7.09L7.09,18.32C8.45,19.37 10.15,20 12,20Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render check 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render check-circle 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M11,16.5L18,9.5L16.59,8.09L11,13.67L7.91,10.59L6.5,12L11,16.5Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render check-circle-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,9.5L11,16.5Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render checkbox-blank-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render checkbox-marked-circle-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render checkbox-marked-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render chevron-down 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render chevron-left 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M5.71,9.88l8.55-9a2.75,2.75,0,0,1,4,0,3.12,3.12,0,0,1,0,4.24L11.75,12l6.54,6.88a3.12,3.12,0,0,1,0,4.24,2.75,2.75,0,0,1-4,0l-8.55-9a3.12,3.12,0,0,1,0-4.24Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render chevron-right 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M18.29,14.12l-8.55,9a2.75,2.75,0,0,1-4,0,3.12,3.12,0,0,1,0-4.24L12.25,12,5.71,5.12a3.12,3.12,0,0,1,0-4.24,2.75,2.75,0,0,1,4,0l8.55,9a3.12,3.12,0,0,1,0,4.24Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render chevron-up 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M14.12,5.71l9,8.55a2.75,2.75,0,0,1,0,4,3.12,3.12,0,0,1-4.24,0L12,11.75,5.12,18.29a3.12,3.12,0,0,1-4.24,0,2.75,2.75,0,0,1,0-4l9-8.55a3.12,3.12,0,0,1,4.24,0Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render circle 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render clock-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render close 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render close-circle-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render copy-content 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render delete 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render detach 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M2,5.27L3.28,4L20,20.72L18.73,22L13.9,17.17L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L12.5,15.76L10.88,14.15C10.87,14.39 10.77,14.64 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C8.12,13.77 7.63,12.37 7.72,11L2,5.27M12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.79,8.97L9.38,7.55L12.71,4.22M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.2,10.54 16.61,12.5 16.06,14.23L14.28,12.46C14.23,11.78 13.94,11.11 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render doc 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render dots-horizontal 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render dots-vertical 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
      style="transform: rotate(-90deg); transform-origin: 50% 50%;"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render download 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render drag-variant 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M22.67,12L18.18,16.5L15.67,14L17.65,12L15.67,10.04L18.18,7.53L22.67,12M12,1.33L16.47,5.82L13.96,8.33L12,6.35L10,8.33L7.5,5.82L12,1.33M12,22.67L7.53,18.18L10.04,15.67L12,17.65L14,15.67L16.5,18.18L12,22.67M1.33,12L5.82,7.5L8.33,10L6.35,12L8.33,13.96L5.82,16.47L1.33,12M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render drag-vertical 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render east 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render eye 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render eye-off 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render filter 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M14,12V19.88C14.04,20.18 13.94,20.5 13.71,20.71C13.32,21.1 12.69,21.1 12.3,20.71L10.29,18.7C10.06,18.47 9.96,18.16 10,17.87V12H9.97L4.21,4.62C3.87,4.19 3.95,3.56 4.38,3.22C4.57,3.08 4.78,3 5,3V3H19V3C19.22,3 19.43,3.08 19.62,3.22C20.05,3.56 20.13,4.19 19.79,4.62L14.03,12H14Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render help-circle-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render information-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render key 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12.65 10C11.83 7.67 9.61 6 7 6c-3.31 0-6 2.69-6 6s2.69 6 6 6c2.61 0 4.83-1.67 5.65-4H17v4h4v-4h2v-4H12.65zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render lock 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render minus 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,13H5V11H19V13Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render minus-box-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,19V5H5V19H19M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5C3,3.89 3.9,3 5,3H19M17,11V13H7V11H17Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render open-in-new 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render pencil 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render plus 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render plus-box 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M17,13H13V17H11V13H7V11H11V7H13V11H17M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render plus-box-outline 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M19,19V5H5V19H19M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5C3,3.89 3.9,3 5,3H19M11,7H13V11H17V13H13V17H11V13H7V11H11V7Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render radiobox-blank 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render radiobox-marked 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render ray-end-arrow 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render ray-start-arrow 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M23,12L19,16V13H6.83C6.42,14.17 5.31,15 4,15A3,3 0 0,1 1,12A3,3 0 0,1 4,9C5.31,9 6.42,9.83 6.83,11H19V8L23,12Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render ray-start-end 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M4,9C5.31,9 6.42,9.83 6.83,11H17.17C17.58,9.83 18.69,9 20,9A3,3 0 0,1 23,12A3,3 0 0,1 20,15C18.69,15 17.58,14.17 17.17,13H6.83C6.42,14.17 5.31,15 4,15A3,3 0 0,1 1,12A3,3 0 0,1 4,9Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render ray-top-arrow 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
      style="transform: rotate(-90deg); transform-origin: 50% 50%;"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render restore 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,3A9,9 0 0,0 3,12H0L4,16L8,12H5A7,7 0 0,1 12,5A7,7 0 0,1 19,12A7,7 0 0,1 12,19C10.5,19 9.09,18.5 7.94,17.7L6.5,19.14C8.04,20.3 9.94,21 12,21A9,9 0 0,0 21,12A9,9 0 0,0 12,3M14,12A2,2 0 0,0 12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render revoke 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M17.767 17.333v-2.6H11.7v-3.466h6.067v-2.6L22.1 13l-4.333 4.333zm-1.734-13c.958 0 1.734.776 1.734 1.734V7.8h-1.734V6.067h-7.8v13.866h7.8V18.2h1.734v1.733c0 .958-.776 1.734-1.734 1.734h-7.8A1.733 1.733 0 016.5 19.933V6.067c0-.958.776-1.734 1.733-1.734h7.8z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render search 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M17.1526587,15.0943396 L16.0686106,15.0943396 L15.6843911,14.7238422 C17.0291595,13.1595197 17.838765,11.1286449 17.838765,8.9193825 C17.838765,3.99313894 13.8456261,0 8.9193825,0 C3.99313894,0 0,3.99313894 0,8.9193825 C0,13.8456261 3.99313894,17.838765 8.9193825,17.838765 C11.1286449,17.838765 13.1595197,17.0291595 14.7238422,15.6843911 L15.0943396,16.0686106 L15.0943396,17.1526587 L21.9554031,24 L24,21.9554031 L17.1526587,15.0943396 L17.1526587,15.0943396 Z M8.9193825,15.0943396 C5.5025729,15.0943396 2.74442539,12.3361921 2.74442539,8.9193825 C2.74442539,5.5025729 5.5025729,2.74442539 8.9193825,2.74442539 C12.3361921,2.74442539 15.0943396,5.5025729 15.0943396,8.9193825 C15.0943396,12.3361921 12.3361921,15.0943396 8.9193825,15.0943396 L8.9193825,15.0943396 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render send 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M13.735 8.575l.122.033.1.041a.887.887 0 01.495 1.015l-.034.111-.04.085-1.335 2.477-.001 1.332 1.282-.391 2.147-2a.973.973 0 011.113-.142l.114.071.095.08a.87.87 0 01.132 1.107l-.077.103-.065.068-.935.869 1.306.187a.922.922 0 01.777.694l.02.122.003.116-.01.092a.924.924 0 01-.852.76l-.12.002-.095-.008-2.894-.437-.06.02-1.293.394.743.998 2.702 1.328a.88.88 0 01.402 1.217.955.955 0 01-1.05.456l-.124-.037-.088-.037-1.186-.584.217 1.235a.884.884 0 01-.452.923l-.115.055-.114.038-.094.02a.95.95 0 01-1.013-.53l-.045-.118-.02-.09-.458-2.747-.836-1.09-.788.995-.498 2.842a.936.936 0 01-1.08.738.915.915 0 01-.784-.828v-.116l.01-.092.216-1.235-1.185.584a.972.972 0 01-1.03-.11l-.102-.095-.08-.098-.05-.08a.872.872 0 01.216-1.093l.104-.076.083-.047 2.625-1.265.817-1.065-1.257-.399-2.987.426a.935.935 0 01-1.067-.754.894.894 0 01.582-.97l.114-.036.094-.018 1.304-.187-.933-.869a.869.869 0 01-.213-.982l.064-.123.075-.104.064-.068a.972.972 0 011.13-.146l.12.075.072.06 2.101 1.99 1.332.405.021-1.234L9.826 9.86a.881.881 0 01.422-1.21.97.97 0 011.129.22l.079.1.048.08.599 1.132.598-1.133a.954.954 0 011.034-.474zM17.158 3L21 5.778l-3.842 2.778V6.7H3V4.867h14.158z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render settings 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render shield-account 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4m0 4a3 3 0 013 3 3 3 0 01-3 3 3 3 0 01-3-3 3 3 0 013-3m5.13 12A9.69 9.69 0 0112 20.92 9.69 9.69 0 016.87 17c-.34-.5-.63-1-.87-1.53 0-1.65 2.71-3 6-3s6 1.32 6 3c-.24.53-.53 1.03-.87 1.53z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render sort 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 6l-5 5h10l-5-5m-5 7l5 5 5-5H7z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render unknow 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render unlock 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M10 13C11.1 13 12 13.89 12 15C12 16.11 11.11 17 10 17S8 16.11 8 15 8.9 13 10 13M18 1C15.24 1 13 3.24 13 6V8H4C2.9 8 2 8.9 2 10V20C2 21.1 2.9 22 4 22H16C17.1 22 18 21.1 18 20V10C18 8.9 17.1 8 16 8H15V6C15 4.34 16.34 3 18 3S21 4.34 21 6V8H23V6C23 3.24 20.76 1 18 1M16 10V20H4V10H16Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render upload 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon render weather-night 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<svg
    class="sc-ui-icon emotion-0 emotion-1"
    viewBox="0 0 24 24"
  >
    <path
      d="M17.75,4.09L15.22,6.03L16.13,9.09L13.5,7.28L10.87,9.09L11.78,6.03L9.25,4.09L12.44,4L13.5,1L14.56,4L17.75,4.09M21.25,11L19.61,12.25L20.2,14.23L18.5,13.06L16.8,14.23L17.39,12.25L15.75,11L17.81,10.95L18.5,9L19.19,10.95L21.25,11M18.97,15.95C19.8,15.87 20.69,17.05 20.16,17.8C19.84,18.25 19.5,18.67 19.08,19.07C15.17,23 8.84,23 4.94,19.07C1.03,15.17 1.03,8.83 4.94,4.93C5.34,4.53 5.76,4.17 6.21,3.85C6.96,3.32 8.14,4.21 8.06,5.04C7.79,7.9 8.75,10.87 10.95,13.06C13.14,15.26 16.1,16.22 18.97,15.95M17.33,17.97C14.5,17.81 11.7,16.64 9.53,14.5C7.36,12.31 6.2,9.5 6.04,6.68C3.23,9.82 3.34,14.64 6.35,17.66C9.37,20.67 14.19,20.78 17.33,17.97Z"
    />
  </svg>
</DocumentFragment>
`;
